fix alignment of nav bar and header content

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,19 +1,26 @@
 header {
+  display: flex;
+  flex-direction: column;
   height: 400px;
   width: 100%;
+  justify-content: center;
+  align-items: center;
   background-color: #e89300;
   background-image: url("https://www.transparenttextures.com/patterns/notebook-dark.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  top: 40%;
+header h2 {
+  color: white;
+  position: relative;
+  bottom: 35px;
 }
 
-h2 {
-  text-align: center;
-  color: white;
+@media only screen and (min-width: 1024px) {
+  header {
+    width: 30%;
+    position: absolute;
+    top: 25%;
+    left: 5%;
+  }
 }
