--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,12 +24,20 @@ body {
 main {
   width: 90%;
   position: absolute;
-  top: 550px;
+  top: 1000px;
   left: 0;
   right: 0;
   margin: auto;
 }
 
+@media only screen and (min-width: 1024px) {
+  main {
+    position: relative;
+    /* width: 50px; */
+    left: 610px;
+    top: 37%;
+  }
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
